--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,8 @@
     "elysia": "^1.3.5",
     "express": "^4.21.2",
     "openai": "^4.104.0",
-    "stripe": "^12.18.0"
+    "stripe": "^12.18.0",
+    "pdfkit": "^0.16.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.3"
